--- a/med-tracker/Properties/launchSettings.json
+++ b/med-tracker/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "med_tracker": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/medtracker",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
