--- a/med-tracker/appsettings.Production.json
+++ b/med-tracker/appsettings.Production.json
@@ -5,5 +5,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:5002"
+      }
+    }
+  }
 }
